Fixed ButtonList styles - hiddening scrollbar for elder browsers

--- a/src/tasks/EscapeHatchesP01/Prac07/styles.module.css
+++ b/src/tasks/EscapeHatchesP01/Prac07/styles.module.css
@@ -7,4 +7,9 @@
   overflow-x: scroll;
   white-space: nowrap;
   scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.buttons::-webkit-scrollbar {
+  display: none;
 }
